# pure-auth

./: default.nix  pure-auth.cabal
src/Pure/: Auth.hs
src/Pure/Auth/: API.hs  GHC.hs  GHCJS.hs
src/Pure/Auth/Data/: Email.hs  Hash.hs  Key.hs  Password.hs  Token.hs  Username.hs
src/Pure/Auth/GHC/: API.hs  Auth.hs  Crypto.hs
src/Pure/Auth/GHCJS/: Access.hs
src/Pure/Auth/GHCJS/Access/: Login.hs  Recover.hs  Signup.hs
