name:                pure-auth
version:             0.8.0.0
homepage:            purehs.org/doc/pure-auth
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-auth.git

library
  exposed-modules:
      Pure.Auth
    , Pure.Auth.API
    , Pure.Auth.Data.Email
    , Pure.Auth.Data.Hash
    , Pure.Auth.Data.Key
    , Pure.Auth.Data.Password
    , Pure.Auth.Data.Token
    , Pure.Auth.Data.Username
    , Pure.Auth.GHCJS
    , Pure.Auth.GHCJS.Access
    , Pure.Auth.GHCJS.Access.Login
    , Pure.Auth.GHCJS.Access.Signup

  build-depends:
    base,
    pure-txt,
    pure-json,
    pure-websocket,
    pure-elm,
    pure-localstorage,
    hashable

  if !(impl(ghcjs))
    build-depends:
      bytestring,
      sorcerer, 
      crypto-api, 
      pwstore-fast 

    other-modules:
        Pure.Auth.GHC
      , Pure.Auth.GHC.API
      , Pure.Auth.GHC.Auth
      , Pure.Auth.GHC.Crypto


  hs-source-dirs:      src
  default-language:    Haskell2010
